--- a/buildscripts/CMakeLists.txt
+++ b/buildscripts/CMakeLists.txt
@@ -419,17 +419,15 @@ ExternalProject_Add(luajit
 )
 
 ExternalProject_Add(zlib
-	URL https://github.com/madler/zlib/releases/download/v1.3/zlib-1.3.tar.gz
-	URL_HASH SHA256=ff0ba4c292013dbc27530b3a81e1f9a813cd39de01ca5e0f8bf355702efa593e
-	DOWNLOAD_DIR ${download_dir}
+        URL https://github.com/madler/zlib/archive/refs/tags/v1.2.11.tar.gz
+        URL_HASH SHA256=629380c90a77b964d896ed37163f5c3a34f6e6d897311f1df2a7016355c45eff
+        DOWNLOAD_DIR ${download_dir}
 
-        PATCH_COMMAND patch -d <SOURCE_DIR> -p1 -t -N < ${CMAKE_SOURCE_DIR}/patches/zliblld.patch
+        CONFIGURE_COMMAND ${wrapper_command} cmake <SOURCE_DIR>
+        ${COMMON_CMAKE_ARGS}
 
-	CONFIGURE_COMMAND ${wrapper_command} cmake <SOURCE_DIR>
-	${COMMON_CMAKE_ARGS}
-
-	BUILD_COMMAND ${wrapper_command} $(MAKE)
-	INSTALL_COMMAND ${wrapper_command} $(MAKE) install
+        BUILD_COMMAND ${wrapper_command} $(MAKE)
+        INSTALL_COMMAND ${wrapper_command} $(MAKE) install
 )
 
 ExternalProject_Add(libxml
